--- a/public/index.html
+++ b/public/index.html
@@ -143,10 +143,11 @@
 
     
     <div class="flex justify-center">
-      <img src="http://localhost:1313/images/portrait.png"
-           alt="Josue Elnathan"
-           class="w-90 rounded-2xl shadow-xl">
-    </div>
+  <img src="http://localhost:1313/images/portrait.png"
+       alt="Josue Elnathan"
+       class="w-90 rounded-2xl shadow-xl">
+</div>
+
 
     
     <div>
@@ -335,8 +336,9 @@
     <div class="text-center md:text-left">
 
       <img src="http://localhost:1313/images/jem.jpg"
-           alt="Josue Elnathan"
-           class="w-78 mx-auto md:mx-0 rounded-2xl shadow-2xl border border-gray-700 mb-8">
+     alt="Josue Elnathan"
+     class="w-[320px] mx-auto md:mx-0 rounded-2xl shadow-2xl border border-gray-700 mb-8">
+
 
       <h2 class="text-3xl font-bold mb-4">
         Let's Work Together
